--- a/common/.config/taskfiles/lint/Taskfile.yml
+++ b/common/.config/taskfiles/lint/Taskfile.yml
@@ -253,6 +253,10 @@ tasks:
       `task lint:packer -- filename.json`
 
       For more information on `packer validate`, see the [Packer website](https://www.packer.io/docs/commands/validate).
+    log:
+      start: Running {{if .CLI_ARGS}}`packer validate {{.CLI_ARGS}}`{{else}}`packer validate` on all files ending with `template.json`{{end}}
+      success: '`packer validate` reported no issues'
+      error: Error while running `packer validate`
     cmds:
       - |
         {{if .CLI_ARGS}}
@@ -282,10 +286,12 @@ tasks:
       file.
 
       For more information, see [Prettier's website](https://prettier.io/).
+    log:
+      start: Linting {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}the project{{end}} with Prettier
+      success: Prettier successfully finished
+      error: Errors were encountered by Prettier
     cmds:
-      - |
-        .config/log info 'Linting {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}the project{{end}} with Prettier'
-        {{.NPX_HANDLE}}prettier --ignore-path {{.PRETTIERIGNORE_CONFIG}} --list-different {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}prettier --ignore-path {{.PRETTIERIGNORE_CONFIG}} --list-different {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   python:
     deps:
@@ -314,6 +320,10 @@ tasks:
       `task lint:python -- myfile.py`
 
       For more information, see [Flake8's GitHub page](https://github.com/PyCQA/flake8).
+    log:
+      start: Linting {{if .CLI_ARGS}}`{{.CLI_ARGS}}`{{else}}the project{{end}} with flake8
+      success: flake8 validation was successful
+      error: flake8 detected some issues
     cmds:
       - |
         {{if .CLI_ARGS}}
@@ -351,6 +361,10 @@ tasks:
       `task lint:scripts -- myfile.sh`
 
       For more information, see [Shellcheck's GitHub page](https://github.com/koalaman/shellcheck).
+    log:
+      start: Linting {{if .CLI_ARGS}}`{{.CLI_ARGS}}`{{else}}the project{{end}} with Shellcheck
+      success: Linted {{if .CLI_ARGS}}`{{.CLI_ARGS}}`{{else}}the project{{end}} with no errors from Shellcheck
+      error: Shellcheck reported errors for {{if .CLI_ARGS}}`{{.CLI_ARGS}}`{{else}}the project{{end}}
     cmds:
       - |
         .config/log info 'Linting with Shellcheck'
@@ -386,11 +400,12 @@ tasks:
       - task: spelling:{{if .CLI_ARGS}}cli{{else}}staged{{end}}
 
   spelling:cli:
+    log:
+      start: Running a spell-check with `cspell`
     cmds:
       - cmd: |
           set -e
           EXIT_CODE=0
-          .config/log info 'Running a spell-check with `cspell`'
           {{.NPX_HANDLE}}cspell --no-progress --show-context --no-must-find-files --config {{.CSPELL_CONFIG}} {{.CLI_ARGS}} || EXIT_CODE=$?
           if [ "$EXIT_CODE" != '0' ]; then
             .config/log warn 'Possible spelling errors were detected. Take appropriate action before merging changes.'
@@ -401,6 +416,8 @@ tasks:
     deps:
       - :install:npm:cspell
       - :install:software:git
+    log:
+      start: Detecting possible spelling errors in staged files
     cmds:
       - cmd: |
           STAGED_FILES="$(git diff --cached --name-only)"
@@ -431,10 +448,12 @@ tasks:
 
       **Example scanning specific file:**
       `task lint:toml -- myfile.toml`
+    log:
+      start: Ensuring {{if .CLI_ARGS}}`{{.CLI_ARGS}}` is valid TOML{{else}}the project'\''s TOML files are valid{{end}}
+      success: The TOML appears to be valid!
+      error: Possible TOML errors were detected
     cmds:
-      - |
-        .config/log info 'Ensuring {{if .CLI_ARGS}}{{.CLI_ARGS}} is valid TOML{{else}}the project'\''s TOML files are valid{{end}}'
-        {{.PYTHON_HANDLE}}check-toml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.PYTHON_HANDLE}}check-toml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   vagrant:
     deps:
