--- a/common/.config/taskfiles/install/Taskfile.yml
+++ b/common/.config/taskfiles/install/Taskfile.yml
@@ -202,7 +202,7 @@ tasks:
     cmds:
       - |
         if [[ "$(jq -r '.dependencies.tslib' package.json)" == 'null' ]]; then
-          if [ "$(jq -r '.compilerOptions.importHelpers')" != 'true' ]; then
+          if [ "$(jq -r '.compilerOptions.importHelpers' tsconfig.json)" != 'true' ]; then
             .config/log info '{{.TSLIB_MSG}}'
           else
             .config/log info 'Automatically installing `tslib` since `importHelpers` is set to true in tsconfig.json'
