--- a/common/.config/taskfiles/go/Taskfile-goreleaser.yml
+++ b/common/.config/taskfiles/go/Taskfile-goreleaser.yml
@@ -5,10 +5,6 @@ vars:
   GORELEASER_CONFIG:
     sh: if [ -f .goreleaser.yml ]; then echo ".goreleaser.yml"; else echo ".config/goreleaser.yml"; fi
 
-env:
-  GOVERSION:
-    sh: go version
-
 tasks:
   build:
     deps:
@@ -18,7 +14,7 @@ tasks:
       start: Building with project with GoReleaser
       success: Completed building the project with GoReleaser
     cmds:
-      - goreleaser build --config {{.GORELEASER_CONFIG}}
+      - goreleaser build --config {{.GORELEASER_CONFIG}} --rm-dist
 
   check:
     deps:
@@ -38,4 +34,4 @@ tasks:
       start: Publishing compiled assets with GoReleaser
       success: Successfully published assets with GoReleaser!
     cmds:
-      - goreleaser release --skip-publish --config {{.GORELEASER_CONFIG}}
+      - goreleaser release --skip-publish --config {{.GORELEASER_CONFIG}} --rm-dist
