Update common/.config/taskfiles/lint/Taskfile.yml, common/.config/taskfiles/fix/Taskfile.yml, common/package.json.liquid, package.json, common/Taskfile.yml.liquid

--- a/package.json
+++ b/package.json
@@ -85,10 +85,7 @@
     "helpUrl": "https://megabyte.space/docs/contributing/commits"
   },
   "eslintConfig": {
-    "extends": "eslint-config-strict-mode",
-    "rules": {
-      "import/no-extraneous-dependencies": "off"
-    }
+    "extends": "eslint-config-strict-mode"
   },
   "funding": [
     {
