Update common/.config/taskfiles/install/Taskfile.yml, common/.config/taskfiles/upstream/Taskfile-project.yml, common/.gitignore, common/.config/taskfiles/upstream/Taskfile-docs.yml, common/.config/taskfiles/upstream/Taskfile-commondocs.yml, common/.config/taskfiles/upstream/Taskfile-common.yml, common/.config/taskfiles/upstream/Taskfile.yml, common/.config/taskfiles/install/Taskfile-software.yml, common/.config/taskfiles/ci/Taskfile.yml

--- a/common/.config/taskfiles/install/Taskfile.yml
+++ b/common/.config/taskfiles/install/Taskfile.yml
@@ -82,6 +82,24 @@ tasks:
     sources:
       - package.json
 
+  modules:local:lockfiles:
+    deps:
+      - :install:software:node
+      - :install:software:yarn
+    cmds:
+      - |
+        if [ ! -f package-lock.json ]; then
+          npm install --package-lock-only
+          mv package-lock.json .config/package-lock.json
+        fi
+      - |
+        if [ ! -f yarn.lock ]; then
+          yarn install --mode update-lockfile
+          mv yarn.lock .config/yarn.lock
+        fi
+    sources:
+      - pnpm-lock.yaml
+
   modules:local:sync:
     log:
       error: Error while synchronizing `NPM_KEEP_UPDATED` packages with the latest version(s)
