--- a/common/.config/taskfiles/upstream/Taskfile-docs.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-docs.yml
@@ -60,8 +60,11 @@ tasks:
       start: Beginning copy sequence
       success: Completed copy sequence
     cmds:
-      - rm -rf .config
+      - mv .config .config-old
       - task: copy:before
+      - cp -f .config-old/package-lock.json .config/package-lock.json
+      - cp -f .config-old/yarn.lock .config/yarn.lock
+      - rm -rf .config-old
       - cp {{.SHARED_FOLDER}}/.gitlab-ci.yml .gitlab-ci.yml
 
   copy:before:
