Update common/.config/taskfiles/upstream/Taskfile-common.yml, common/.config/taskfiles/upstream/Taskfile-commondocs.yml, common/.config/taskfiles/upstream/Taskfile-docs.yml, common/.config/taskfiles/upstream/Taskfile-project.yml

--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -70,8 +70,14 @@ tasks:
     cmds:
       - mv .config .config-old
       - task: copy:begin
-      - cp -f .config-old/package-lock.json .config/package-lock.json
-      - cp -f .config-old/yarn.lock .config/yarn.lock
+      - |
+        if [ -f .config-old/package-lock.json ]; then
+          cp .config-old/package-lock.json .config/package-lock.json
+        fi
+      - |
+        if [ -f .config-old/yarn.lock ]; then
+          cp .config-old/yarn.lock .config/yarn.lock
+        fi
       - rm -rf .config-old
 
   copy:begin:
