--- a/common/.config/taskfiles/upstream/Taskfile-commondocs.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-commondocs.yml
@@ -36,8 +36,14 @@ tasks:
       - |
         PATH="$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
         cp -rT ./{{.COMMON_FOLDER}}/common/ .
-      - cp -f .config-old/package-lock.json .config/package-lock.json
-      - cp -f .config-old/yarn.lock .config/yarn.lock
+      - |
+        if [ -f .config-old/package-lock.json ]; then
+          cp .config-old/package-lock.json .config/package-lock.json
+        fi
+      - |
+        if [ -f .config-old/yarn.lock ]; then
+          cp .config-old/yarn.lock .config/yarn.lock
+        fi
       - rm -rf .config-old
       - task: :common:husky:permissions
       - mv {{.COMMON_FOLDER}}/.gitlab-ci.yml .gitlab-ci.yml
