--- a/common/.config/taskfiles/upstream/Taskfile-docs.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-docs.yml
@@ -62,8 +62,14 @@ tasks:
     cmds:
       - mv .config .config-old
       - task: copy:before
-      - cp -f .config-old/package-lock.json .config/package-lock.json
-      - cp -f .config-old/yarn.lock .config/yarn.lock
+      - |
+        if [ -f .config-old/package-lock.json ]; then
+          cp .config-old/package-lock.json .config/package-lock.json
+        fi
+      - |
+        if [ -f .config-old/yarn.lock ]; then
+          cp .config-old/yarn.lock .config/yarn.lock
+        fi
       - rm -rf .config-old
       - cp {{.SHARED_FOLDER}}/.gitlab-ci.yml .gitlab-ci.yml
 
