--- a/common/.config/taskfiles/upstream/Taskfile-project.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-project.yml
@@ -67,8 +67,14 @@ tasks:
         PATH="$(brew --prefix)/opt/coreutils/libexec/gnubin:$PATH"
         cp -rT {{.SHARED_FOLDER}}/_generated_/common .
         cp -rT {{.SHARED_FOLDER}}/_generated_/{{.REPOSITORY_SUBTYPE}} .
-      - cp -f .config-old/package-lock.json .config/package-lock.json
-      - cp -f .config-old/yarn.lock .config/yarn.lock
+      - |
+        if [ -f .config-old/package-lock.json ]; then
+          cp .config-old/package-lock.json .config/package-lock.json
+        fi
+      - |
+        if [ -f .config-old/yarn.lock ]; then
+          cp .config-old/yarn.lock .config/yarn.lock
+        fi
       - rm -rf .config-old
       - task: :common:husky:permissions
       - task: save:common:keywords
