Update common/.config/taskfiles/install/Taskfile.yml, common/.config/taskfiles/ci/Taskfile.yml, common/.config/taskfiles/upstream/Taskfile-common.yml, common/.config/taskfiles/upstream/Taskfile-commondocs.yml, common/.config/taskfiles/upstream/Taskfile-docs.yml, common/.config/taskfiles/upstream/Taskfile-project.yml

--- a/common/.config/taskfiles/install/Taskfile.yml
+++ b/common/.config/taskfiles/install/Taskfile.yml
@@ -94,10 +94,10 @@ tasks:
         fi
         if [ ! -f yarn.lock ] && [ -f package-lock.json ]; then
           synp --source-file package-lock.json
-          mv yarn.lock .config/yarn.lock
+          mv yarn.lock local/yarn.lock
         fi
         if [ -n "$MOVE_PACKAGE_LOCK" ]; then
-          mv package-lock.json .config/package-lock.json
+          mv package-lock.json local/package-lock.json
         fi
     sources:
       - pnpm-lock.yaml
