--- a/common/.config/taskfiles/ansible/Taskfile-test.yml
+++ b/common/.config/taskfiles/ansible/Taskfile-test.yml
@@ -6,7 +6,13 @@ vars:
   MOLECULE_TEST_OPTIONS: ANSIBLE_STDOUT_CALLBACK=community.general.yaml
     ANSIBLE_CALLBACKS_ENABLED="junit, ansible.posix.profile_tasks, ansible.posix.timer"
     JUNIT_OUTPUT_DIR="molecule/.results/junit" JUNIT_FAIL_ON_CHANGE=true JUNIT_HIDE_TASK_ARGUMENTS=true
-  PYTHON_MOLECULE_HANDLE: unbuffer {{.PYTHON_HANDLE}}
+  PYTHON_MOLECULE_HANDLE:
+    sh: |
+      if [ -n "$CI" ]; then
+        echo ''
+      else
+        echo 'unbuffer {{.PYTHON_HANDLE}}'
+      fi
 
 tasks:
   allure:report:
@@ -51,8 +57,13 @@ tasks:
 
   local:test:
     cmds:
-      - task: local:test:ci
-      - task: local:test:local
+      - |
+        if [ -n "$CI" ]; then
+          .config/log info '`$CI` environment variable is present'
+          task ansible:test:local:test:ci
+        else
+          task ansible:test:local:test:local
+        fi
 
   local:test:ci:
     deps:
@@ -60,9 +71,9 @@ tasks:
     cmds:
       - |
         if [ -n "$WINDOWS_ANSIBLE_TEST" ]; then
-          pip3 install ansible ansibler molecule 'pywinrm[credssp]'
+          pip3 install ansible 'pywinrm[credssp]'
         else
-          pip3 install ansible ansibler molecule
+          pip3 install ansible
         fi
       - ansible-galaxy install -r requirements.yml
       - task: local:test:logic
@@ -70,7 +81,6 @@ tasks:
   local:test:local:
     deps:
       - :symlink:{{.REPOSITORY_SUBTYPE}}
-      - :install:software:sentry
       - task: :install:python:requirements
         env:
           INSTALL_OPTIONS: --no-dev
@@ -114,7 +124,7 @@ tasks:
           export ANSIBLE_CONFIG="$PWD/ansible.cfg"
         fi
         {{.PYTHON_MOLECULE_HANDLE}} ansible-playbook -i inventory{{.SUDO_PASS_PARAM}} test/{{OS}}/test.yml 2>&1 | tee debug.log || EXIT_CODE=$?
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: debug.log
 
@@ -128,10 +138,42 @@ tasks:
     cmds:
       - echo '{{.TEST_PLAY}}' > test.yml
 
+  molecule:ci:requirements:
+    cmds:
+      - |
+        if [ -n "$WINDOWS_ANSIBLE_TEST" ]; then
+          .config/log info 'Running `pip3 install ansible ansibler molecule pywinrm[credssp]`'
+          pip3 install ansible ansibler molecule 'pywinrm[credssp]'
+        else
+          .config/log info 'Running `pip3 install ansible ansibler molecule`'
+          pip3 install ansible ansibler molecule
+        fi
+      - |
+        .config/log info 'Running `ansible-galaxy install --ignore-errors -r requirements.yml`'
+        ansible-galaxy install --ignore-errors -r requirements.yml
+
   molecule:dependencies:
+    run: once
+    cmds:
+      - |
+        if [ -n "$CI" ]; then
+          .config/log info '`$CI` environment is present'
+          task ansible:test:molecule:dependencies:ci
+        else
+          task ansible:test:molecule:dependencies:local
+        fi
+
+  molecule:dependencies:ci:
+    cmds:
+      - task: molecule:ci:requirements
+    status:
+      - '[ -z "$CI" ]'
+
+  molecule:dependencies:local:
     deps:
       - :install:python:requirements
       - :install:software:expect
+      - :install:software:sshpass
     log:
       error: Encountered error while installing Ansible Galaxy requirements defined in `requirements.yml`
       start: Installing Ansible Galaxy requirements defined in `requirements.yml`
@@ -141,10 +183,12 @@ tasks:
         if poetry &> /dev/null; then
           {{.PYTHON_HANDLE}} ansible-galaxy install --ignore-errors -r requirements.yml
         else
-          .config/log info 'Current shell is already inside a Poetry virtualenv'
+          .config/log info 'Current shell is already a Poetry virtual environment'
           ansible-galaxy install --ignore-errors -r requirements.yml
         fi
       - task: :symlink:{{.REPOSITORY_SUBTYPE}}
+    status:
+      - '[ -n "$CI" ]'
 
   molecule:docker:
     desc: Runs a Docker Molecule test
@@ -170,8 +214,6 @@ tasks:
     deps:
       - molecule:dependencies
       - :install:software:docker
-      - :install:software:sentry
-      - :install:software:sshpass
     log:
       error: The `{{.CLI_ARGS}}` Docker Molecule test finished with errors
       start: Running Docker Molecule test on containers in the `{{.CLI_ARGS}}` group
@@ -183,7 +225,7 @@ tasks:
         -- --skip-tags skipdockertest 2>&1 | tee debug.log || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: debug.log
 
@@ -191,8 +233,6 @@ tasks:
     deps:
       - molecule:dependencies
       - :install:software:docker
-      - :install:software:sentry
-      - :install:software:sshpass
     vars:
       MOLECULE_DATE:
         sh: date '+%Y-%m-%d'
@@ -213,7 +253,7 @@ tasks:
           tee '{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-$SCENARIO.txt' || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: '{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-$SCENARIO.txt'
 
@@ -263,7 +303,6 @@ tasks:
     deps:
       - molecule:dependencies
       - :install:software:gcloud
-      - :install:software:sentry
     log:
       error: Encountered error(s) while running the Google Cloud Platform Molecule test
       start: Running Google Cloud Platform Molecule test
@@ -275,7 +314,7 @@ tasks:
         {{.PYTHON_MOLECULE_HANDLE}}molecule test -s gcp 2>&1 | tee debug.log || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: debug.log
 
@@ -283,7 +322,6 @@ tasks:
     deps:
       - molecule:dependencies
       - :install:software:gcloud
-      - :install:software:sentry
       - :install:software:yq
     vars:
       MOLECULE_DATE:
@@ -302,7 +340,7 @@ tasks:
         else
           .config/log success 'Finished running the test (results were logged to `{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-gcp.txt`)'
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: "{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-gcp.txt"
       - |
@@ -387,21 +425,26 @@ tasks:
   molecule:local:test:
     deps:
       - molecule:dependencies
-      - :install:software:sentry
     log:
       error: There was an error while running the Molecule test locally
       start: Running the Molecule test locally
       success: The local Molecule test was successfully run
+    vars:
+      MOLECULE_DATE:
+        sh: date '+%Y-%m-%d'
     cmds:
       - |
         set -o pipefail
-        PATH="$(poetry env info | grep 'Python:   /' | sed 's/Python:   //' | sed 's/$/\/bin/'):$PATH" \
-        {{.MOLECULE_TEST_OPTIONS}} {{.PYTHON_MOLECULE_HANDLE}}molecule test -s local 2>&1 | tee debug.log || EXIT_CODE=$?
+        if [ -z "$CI" ]; then
+          export PATH="$(poetry env info | grep 'Python:   /' | sed 's/Python:   //' | sed 's/$/\/bin/'):$PATH"
+        fi
+        {{.MOLECULE_TEST_OPTIONS}} {{.PYTHON_MOLECULE_HANDLE}}molecule test -s local 2>&1 | \
+        tee '{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-default.txt' || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
-          FILE: debug.log
+          FILE: '{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-default.txt'
 
   molecule:ssh:
     desc: Runs a Molecule test over SSH
@@ -420,7 +463,6 @@ tasks:
   molecule:ssh:cli:
     deps:
       - molecule:dependencies
-      - :install:software:sentry
     log:
       error: Errors encountered while running the SSH Molecule test
       start: Running the Molecule test over SSH
@@ -431,7 +473,7 @@ tasks:
         {{.MOLECULE_TEST_OPTIONS}} {{.PYTHON_MOLECULE_HANDLE}}molecule test -s remote 2>&1 | tee debug.log || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: debug.log
 
@@ -537,8 +579,6 @@ tasks:
   molecule:virtualbox:cli:
     deps:
       - molecule:dependencies
-      - :install:software:sentry
-      - :install:software:sshpass
       - :install:software:vagrant
       - :install:software:virtualbox
     env:
@@ -553,7 +593,7 @@ tasks:
         {{.MOLECULE_TEST_OPTIONS}} MOLECULE_GROUP="{{.CLI_ARGS}}" {{.PYTHON_MOLECULE_HANDLE}}molecule test 2>&1 | tee debug.log || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: debug.log
 
@@ -587,8 +627,6 @@ tasks:
   molecule:virtualbox:converge:cli:
     deps:
       - molecule:dependencies
-      - :install:software:sentry
-      - :install:software:sshpass
       - :install:software:vagrant
       - :install:software:virtualbox
     env:
@@ -603,7 +641,7 @@ tasks:
         {{.MOLECULE_TEST_OPTIONS}} MOLECULE_GROUP={{.CLI_ARGS}} {{.PYTHON_MOLECULE_HANDLE}}molecule converge -s desktop 2>&1 | tee debug.log || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: debug.log
 
@@ -651,8 +689,6 @@ tasks:
   molecule:virtualbox:matrix:
     deps:
       - molecule:dependencies
-      - :install:software:sentry
-      - :install:software:sshpass
       - :install:software:vagrant
       - :install:software:virtualbox
     vars:
@@ -670,7 +706,7 @@ tasks:
         tee '{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-default.txt' || EXIT_CODE=$?
         if [ "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: '{{.MOLECULE_LOGS_PATH}}/{{.MOLECULE_DATE}}-default.txt'
 
@@ -718,6 +754,18 @@ tasks:
     preconditions:
       - sh: test -f molecule/default/molecule.yml
         msg: The `molecule/default/molecule.yml` file must be present and in the proper format
+
+  post:molecule:log:
+    deps:
+      - ansifilter
+    cmds:
+      - task: :ci:commit:config
+      - git pull --ff-only origin master
+      - git add '{{.FILE}}'
+      - git commit -m "📝 docs(test results): new Molecule test results added"
+      - git push origin master
+    status:
+      - '[ "{{.FILE}}" == "debug.log" ] || [ -z "$GITLAB_CI ]'
 
   prompt:
     vars:
@@ -855,8 +903,6 @@ tasks:
       - task: :install:python:requirements
         vars:
           INSTALL_OPTIONS: --no-dev
-      - :install:software:sentry
-      - :install:software:sshpass
       - :install:software:vagrant
       - :install:software:virtualbox
     log:
@@ -869,7 +915,7 @@ tasks:
         vagrant up {{.CLI_ARGS}} 2>&1 | tee debug.log || EXIT_CODE=$?
         if [ -n "$EXIT_CODE" ]; then
         fi
-      - task: ansifilter
+      - task: post:molecule:log
         vars:
           FILE: debug.log
 
