--- a/common/.config/taskfiles/publish/Taskfile.yml
+++ b/common/.config/taskfiles/publish/Taskfile.yml
@@ -46,6 +46,7 @@ tasks:
     vars:
       RELEASE_PREFIX:
         sh: if [ -f setup.cfg ]; then echo 'poetry run '; else echo ''; fi
+      RUN_OPTIONS: '{{if .CLI_ARGS}} {{.CLI_ARGS}}{{else}} --ci true --debug --dry-run false{{end}}'
     log:
       error: Error while running `semantic-release`
       start: Releasing with `semantic-release`..
@@ -65,7 +66,7 @@ tasks:
           export GIT_CREDENTIALS="gitlab-ci-token:$CI_BUILD_TOKEN"
         fi
         unset
-        {{.RELEASE_PREFIX}}semantic-release -r "$(git remote get-url origin)"{{if .CLI_ARGS}} {{.CLI_ARGS}}{{end}}
+        {{.RELEASE_PREFIX}}semantic-release -r "$(git remote get-url origin)"{{.RUN_OPTIONS}}
 
   version:tag:
     deps:
